--- a/res/layout/my_fansziliaomobanhead.xml
+++ b/res/layout/my_fansziliaomobanhead.xml
@@ -63,7 +63,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/bggray"
+                android:background="@color/spilt_line_color"
                 android:orientation="vertical" >
 
             </LinearLayout>
@@ -97,6 +97,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="21"
+                        android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
 
@@ -106,6 +107,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                     android:text="双子座" />
 
                 <ImageView
@@ -118,6 +121,8 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                     android:text="北京" />
 
                 <ImageView
@@ -132,6 +137,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                     android:text="8分钟前" />
 
             </LinearLayout>
@@ -139,7 +146,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/bggray"
+                android:background="@color/spilt_line_color"
                 android:orientation="vertical" >
 
             </LinearLayout>
@@ -165,6 +172,8 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="我的动态" />
 
                     <TextView
@@ -173,6 +182,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text="317"
+                        android:textSize="@dimen/new_size_2"
                         android:textColor="@color/bt_red" />
 
                 </LinearLayout>
@@ -222,7 +232,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/bggray"
+                android:background="@color/spilt_line_color"
                 android:orientation="vertical" >
             </LinearLayout>
 
@@ -243,6 +253,8 @@
                         android:id="@+id/TextView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="姓名" />
 
                     <LinearLayout
@@ -254,8 +266,7 @@
 
                         <TextView
                             android:id="@+id/TextView20"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="吴沐熙" />
 
                         <LinearLayout
@@ -263,7 +274,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -279,6 +290,8 @@
                         android:id="@+id/TextView17"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="昵称" />
 
                     <LinearLayout
@@ -290,8 +303,7 @@
 
                         <TextView
                             android:id="@+id/TextView18"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="Vicky" />
 
                         <LinearLayout
@@ -299,7 +311,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -315,6 +327,8 @@
                         android:id="@+id/TextView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="年龄" />
 
                     <LinearLayout
@@ -326,8 +340,7 @@
 
                         <TextView
                             android:id="@+id/TextView16"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="25" />
 
                         <LinearLayout
@@ -335,7 +348,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -351,6 +364,8 @@
                         android:id="@+id/TextView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="星座" />
 
                     <LinearLayout
@@ -362,8 +377,7 @@
 
                         <TextView
                             android:id="@+id/TextView14"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="双子座" />
 
                         <LinearLayout
@@ -371,7 +385,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -387,6 +401,8 @@
                         android:id="@+id/TextView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="职业" />
 
                     <LinearLayout
@@ -398,8 +414,7 @@
 
                         <TextView
                             android:id="@+id/TextView12"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="演员" />
 
                         <LinearLayout
@@ -407,7 +422,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -423,6 +438,8 @@
                         android:id="@+id/TextView09"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="家乡" />
 
                     <LinearLayout
@@ -434,8 +451,7 @@
 
                         <TextView
                             android:id="@+id/TextView10"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="湖南省阮江市" />
 
                         <LinearLayout
@@ -443,7 +459,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
@@ -459,6 +475,8 @@
                         android:id="@+id/TextView07"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                    android:textColor="@color/color_2"
                         android:text="身高" />
 
                     <LinearLayout
@@ -470,8 +488,7 @@
 
                         <TextView
                             android:id="@+id/TextView08"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="172cm" />
 
                         <LinearLayout
@@ -479,7 +496,7 @@
                             android:layout_height="1dp"
                             android:layout_marginRight="10dp"
                             android:layout_marginTop="5dp"
-                            android:background="@color/bggray"
+                            android:background="@color/spilt_line_color"
                             android:orientation="vertical" >
                         </LinearLayout>
                     </LinearLayout>
