--- a/res/layout/my_yirenziliaobianjihead.xml
+++ b/res/layout/my_yirenziliaobianjihead.xml
@@ -95,6 +95,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="21"
+                        android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
 
@@ -104,6 +105,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                     android:text="双子座" />
 
                 <ImageView
@@ -116,6 +119,8 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                     android:text="北京" />
 
                 <ImageView
@@ -130,6 +135,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                     android:text="8分钟前" />
 
             </LinearLayout>
@@ -163,6 +170,8 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="我的动态" />
 
                     <TextView
@@ -171,6 +180,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text="317"
+                        android:textSize="@dimen/new_size_2"
                         android:textColor="@color/bt_red" />
 
                 </LinearLayout>
@@ -225,6 +235,8 @@
                         android:id="@+id/TextView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="姓名" />
 
                     <LinearLayout
@@ -265,6 +277,8 @@
                         android:id="@+id/TextView17"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="昵称" />
 
                     <LinearLayout
@@ -306,6 +320,8 @@
                         android:id="@+id/TextView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="年龄" />
 
                     <LinearLayout
@@ -317,8 +333,7 @@
 
                         <TextView
                             android:id="@+id/TextView16"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="25" />
 
                         <LinearLayout
@@ -342,6 +357,8 @@
                         android:id="@+id/TextView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="星座" />
 
                     <LinearLayout
@@ -353,8 +370,7 @@
 
                         <TextView
                             android:id="@+id/TextView14"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="双子座" />
 
                         <LinearLayout
@@ -378,6 +394,8 @@
                         android:id="@+id/TextView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="职业" />
 
                     <LinearLayout
@@ -418,6 +436,8 @@
                         android:id="@+id/TextView09"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="家乡" />
 
                     <LinearLayout
@@ -458,6 +478,8 @@
                         android:id="@+id/TextView07"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="身高" />
 
                     <LinearLayout
@@ -499,6 +521,8 @@
                         android:id="@+id/TextView05"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="三围" />
 
                     <LinearLayout
@@ -510,8 +534,7 @@
 
                         <TextView
                             android:id="@+id/TextView06"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            style="@style/main_color3_style"
                             android:text="89,60,95" />
 
                         <LinearLayout
@@ -535,6 +558,8 @@
                         android:id="@+id/TextView22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="我的作品" />
 
                    <LinearLayout
@@ -570,6 +595,8 @@
                         android:id="@+id/TextView03"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="我的代言" />
 
                     <LinearLayout
@@ -610,6 +637,8 @@
                         android:id="@+id/TextView01"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="获奖记录" />
 
                     <LinearLayout
@@ -647,6 +676,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/btn_green"
         android:textColor="@color/white"
+        android:textSize="@dimen/new_size_4"
         android:text="保存资料" />
         </LinearLayout>
     </ScrollView>
