--- a/res/layout/my_yirenzuopin_item.xml
+++ b/res/layout/my_yirenzuopin_item.xml
@@ -25,6 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
             android:text="片名:" />
 
         <TextView
@@ -32,6 +34,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
             android:text="角色:" />
 
         <TextView
@@ -39,6 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
             android:text="时间:" />
     </LinearLayout>
 
@@ -54,6 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
             android:text="一夜惊喜" />
 
         <TextView
@@ -61,6 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
             android:text="米雪" />
 
         <TextView
@@ -68,6 +78,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
             android:text="2013年8月9日" />
 
     </LinearLayout>
