--- a/res/layout/near_list_item.xml
+++ b/res/layout/near_list_item.xml
@@ -31,8 +31,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="吴沐熙vicky"
-                android:textColor="@color/texthui"
-                android:textSize="13dp" />
+                android:textColor="@color/color_4"
+                android:textSize="@dimen/new_size_3" />
 
             <TextView
                 android:id="@+id/tvonlinetime"
@@ -41,8 +41,8 @@
                 android:layout_weight="1"
                 android:text="北京/2分钟前"
                 android:gravity="right"
-                android:textColor="@color/texthui"
-                android:textSize="10dp" />
+                android:textColor="@color/color_4"
+                android:textSize="@dimen/new_size_1" />
         </LinearLayout>
 
         <LinearLayout
@@ -70,16 +70,16 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="21岁"
-                android:textColor="@color/texthui"
-                android:textSize="13dp" />
+                android:textColor="@color/color_4"
+                android:textSize="@dimen/new_size_3" />
 
             <TextView
                 android:id="@+id/tvzhiye"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="职业/模特、演员"
-                android:textColor="@color/texthui"
-                android:textSize="13dp" />
+                android:textColor="@color/color_4"
+                android:textSize="@dimen/new_size_3" />
         </LinearLayout>
 
         <TextView
@@ -88,8 +88,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:text="北京电影学院获奖作品《安慰》中女一号"
-            android:textColor="@color/black"
-            android:textSize="13dp" />
+            android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
     </LinearLayout>
 
