--- a/res/layout/near_yirenxiangqingmobanhead.xml
+++ b/res/layout/near_yirenxiangqingmobanhead.xml
@@ -98,6 +98,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="21"
+            android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
 
@@ -107,6 +108,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
+                    android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                     android:text="双子座" />
 
                 <ImageView
@@ -119,6 +122,8 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                     android:text="北京" />
 
                 <ImageView
@@ -133,6 +138,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                     android:text="8分钟前" />
 
             </LinearLayout>
@@ -166,6 +173,8 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="她的动态" />
 
                     <TextView
@@ -174,6 +183,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text="317"
+            android:textSize="@dimen/new_size_2"
                         android:textColor="@color/bt_red" />
 
                 </LinearLayout>
@@ -228,6 +238,8 @@
                         android:id="@+id/TextView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="姓名" />
 
                     <LinearLayout
@@ -263,6 +275,8 @@
                         android:id="@+id/TextView17"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="昵称" />
 
                     <LinearLayout
@@ -298,6 +312,8 @@
                         android:id="@+id/TextView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="年龄" />
 
                     <LinearLayout
@@ -333,6 +349,8 @@
                         android:id="@+id/TextView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="星座" />
 
                     <LinearLayout
@@ -368,6 +386,8 @@
                         android:id="@+id/TextView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="职业" />
 
                     <LinearLayout
@@ -403,6 +423,8 @@
                         android:id="@+id/TextView09"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="家乡" />
 
                     <LinearLayout
@@ -438,6 +460,8 @@
                         android:id="@+id/TextView07"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="身高" />
 
                     <LinearLayout
@@ -473,6 +497,8 @@
                         android:id="@+id/TextView05"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="三围" />
 
                     <LinearLayout
@@ -508,6 +534,8 @@
                         android:id="@+id/TextView22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="她的作品" />
 
                    <LinearLayout
@@ -543,6 +571,8 @@
                         android:id="@+id/TextView03"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="她的代言" />
 
                     <LinearLayout
@@ -556,6 +586,8 @@
                             android:id="@+id/TextView04"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                             android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员\n第12届华语电影传媒大奖最佳女主角" />
 
                         <LinearLayout
@@ -579,6 +611,8 @@
                         android:id="@+id/TextView01"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                         android:text="获奖记录" />
 
                     <LinearLayout
@@ -592,6 +626,8 @@
                             android:id="@+id/TextView02"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
                             android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员" />
 
                         <LinearLayout
