--- a/res/layout/my_fuwu_item.xml
+++ b/res/layout/my_fuwu_item.xml
@@ -33,6 +33,8 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_4"
             android:text="" />
 
     </LinearLayout>
