--- a/res/layout/my_main_fans.xml
+++ b/res/layout/my_main_fans.xml
@@ -56,6 +56,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="乱世飞尘"
+            			android:textSize="@dimen/new_size_3"
                                 android:textColor="@color/color_2" />
 
                             <ImageView
@@ -83,6 +84,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="星币余额"
+            			android:textSize="@dimen/new_size_3"
                                 android:textColor="@color/color_3" />
 
                             <TextView
@@ -91,6 +93,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
                                 android:text="56"
+            			android:textSize="@dimen/new_size_3"
                                 android:textColor="@color/color_3" />
 
                         </LinearLayout>
@@ -132,6 +135,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="226"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_2" />
 
                         <TextView
@@ -139,6 +143,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="好友"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_3" />
 
                     </LinearLayout>
@@ -158,6 +163,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="123"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_2" />
 
                         <TextView
@@ -165,6 +171,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="推荐"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_3" />
 
                     </LinearLayout>
@@ -184,6 +191,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="145"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_2" />
 
                         <TextView
@@ -191,6 +199,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="关注"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_3" />
 
                     </LinearLayout>
@@ -209,12 +218,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="46"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_2" />
                         <TextView
                             android:id="@+id/textView11"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="粉丝"
+            			android:textSize="@dimen/new_size_3"
                             android:textColor="@color/color_3" />
 
 
@@ -253,7 +264,7 @@
                         android:layout_weight="87"
                         android:text="我的钱包"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/imageView8"
@@ -296,7 +307,7 @@
                         android:layout_weight="87"
                         android:text="工作管理"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView01"
@@ -333,7 +344,7 @@
                         android:layout_weight="87"
                         android:text="黑名单"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView03"
@@ -375,7 +386,7 @@
                         android:layout_weight="87"
                         android:text="联系客服"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageViewkefu"
@@ -411,7 +422,7 @@
                         android:layout_weight="87"
                         android:text="检测更新"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView04"
@@ -447,7 +458,7 @@
                         android:layout_weight="87"
                         android:text="关于我们"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView05"
@@ -483,7 +494,7 @@
                         android:layout_weight="87"
                         android:text="用户协议"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView06"
@@ -520,7 +531,7 @@
                         android:layout_weight="87"
                         android:text="帮助与反馈"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView07"
@@ -557,7 +568,7 @@
                         android:layout_weight="87"
                         android:text="清理图片缓存"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageView08"
@@ -593,7 +604,7 @@
                         android:layout_weight="87"
                         android:text="退出"
                         android:textColor="@color/new_color_1"
-                        android:textSize="15dp" />
+                        android:textSize="@dimen/new_size_4" />
 
                     <ImageView
                         android:id="@+id/ImageViewexit"
