--- a/res/layout/my_yirenwork_item.xml
+++ b/res/layout/my_yirenwork_item.xml
@@ -31,8 +31,8 @@
                 android:layout_marginLeft="10dp"
                 android:layout_weight="1"
                 android:text="工作内容1"
-                android:textColor="@color/black"
-                android:textSize="13dp" />
+                android:textColor="@color/color_2"
+                android:textSize="@dimen/new_size_3" />
 
             <TextView
                 android:id="@+id/tvstatus"
@@ -67,6 +67,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:text="结算方式:"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
                 <TextView
@@ -76,6 +77,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:text="日结"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
                 <TextView
@@ -85,6 +87,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="5dp"
                     android:text="价格:"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
                 <TextView
@@ -94,6 +97,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:text="100"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
             </LinearLayout>
@@ -110,6 +114,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:text="北京"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
                 <TextView
@@ -120,6 +125,7 @@
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="5dp"
                     android:text="工作日期:"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
                 <TextView
@@ -130,6 +136,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
                     android:text="2014-9-10"
+                    android:textSize="@dimen/new_size_3"
                     android:textColor="@color/color_3" />
 
             </LinearLayout>
