--- a/res/layout/my_yirenziliaomobanhead.xml
+++ b/res/layout/my_yirenziliaomobanhead.xml
@@ -94,6 +94,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="21"
+                        android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
 
@@ -103,6 +104,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
+                    android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                     android:text="双子座" />
 
                 <ImageView
@@ -115,6 +118,8 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                     android:text="北京" />
 
                 <ImageView
@@ -129,6 +134,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
+                    android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                     android:text="8分钟前" />
             </LinearLayout>
 
@@ -160,6 +167,8 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="我的动态" />
 
                     <TextView
@@ -168,6 +177,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text="317"
+                        android:textSize="@dimen/new_size_2"
                         android:textColor="@color/bt_red" />
                 </LinearLayout>
 
@@ -220,6 +230,8 @@
                         android:id="@+id/TextView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="姓名" />
 
                     <LinearLayout
@@ -255,6 +267,8 @@
                         android:id="@+id/TextView17"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="昵称" />
 
                     <LinearLayout
@@ -290,6 +304,8 @@
                         android:id="@+id/TextView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="年龄" />
 
                     <LinearLayout
@@ -325,6 +341,8 @@
                         android:id="@+id/TextView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="星座" />
 
                     <LinearLayout
@@ -360,6 +378,8 @@
                         android:id="@+id/TextView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="职业" />
 
                     <LinearLayout
@@ -395,6 +415,8 @@
                         android:id="@+id/TextView09"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="家乡" />
 
                     <LinearLayout
@@ -430,6 +452,8 @@
                         android:id="@+id/TextView07"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="身高" />
 
                     <LinearLayout
@@ -465,6 +489,8 @@
                         android:id="@+id/TextView05"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="三围" />
 
                     <LinearLayout
@@ -500,6 +526,8 @@
                         android:id="@+id/TextView22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="我的作品" />
 
                     <LinearLayout
@@ -536,6 +564,8 @@
                         android:id="@+id/TextView03"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="我的代言" />
 
                     <LinearLayout
@@ -549,6 +579,8 @@
                             android:id="@+id/TextView04"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                             android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员\n第12届华语电影传媒大奖最佳女主角" />
 
                         <LinearLayout
@@ -572,6 +604,8 @@
                         android:id="@+id/TextView01"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                         android:text="获奖记录" />
 
                     <LinearLayout
@@ -585,6 +619,8 @@
                             android:id="@+id/TextView02"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="@dimen/new_size_3"
+                        android:textColor="@color/color_2"
                             android:text="第20届北京大学电影节最佳女主角\n第9届华鼎奖女演员" />
 
                         <LinearLayout
