--- a/res/layout/near_fansxiangqingmobanhead.xml
+++ b/res/layout/near_fansxiangqingmobanhead.xml
@@ -96,7 +96,8 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="21"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/new_size_2" />
                 </LinearLayout>
 
                 <TextView
@@ -105,7 +106,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
-                    android:text="双子座" />
+                    android:text="双子座"
+                    android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -117,7 +120,9 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="北京" />
+                    android:text="北京"
+                    android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_2" />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -131,7 +136,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
-                    android:text="8分钟前" />
+                    android:text="8分钟前"
+                    android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_2" />
 
             </LinearLayout>
 
@@ -164,7 +171,9 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
-                        android:text="她的动态" />
+                        android:text="她的动态"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <TextView
                         android:id="@+id/textView6"
@@ -172,7 +181,8 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text="317"
-                        android:textColor="@color/bt_red" />
+                        android:textColor="@color/bt_red"
+                    android:textSize="@dimen/new_size_2" />
 
                 </LinearLayout>
 
@@ -241,7 +251,9 @@
                         android:id="@+id/TextView07"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="身高" />
+                        android:text="身高"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -275,7 +287,9 @@
                         android:id="@+id/TextView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="姓名" />
+                        android:text="姓名"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -309,7 +323,9 @@
                         android:id="@+id/TextView17"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="昵称" />
+                        android:text="昵称"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -343,7 +359,9 @@
                         android:id="@+id/TextView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="年龄" />
+                        android:text="年龄"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -377,7 +395,9 @@
                         android:id="@+id/TextView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="星座" />
+                        android:text="星座"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -411,7 +431,9 @@
                         android:id="@+id/TextView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="职业" />
+                        android:text="职业"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -445,7 +467,9 @@
                         android:id="@+id/TextView09"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="家乡" />
+                        android:text="家乡"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
