--- a/res/layout/near_shaixuan.xml
+++ b/res/layout/near_shaixuan.xml
@@ -16,7 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="您想看到的用户"
-            android:textColor="@color/color_4" />
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_3" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,7 +81,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:text="用户年龄"
-            android:textColor="@color/texthui" />
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_3" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -216,7 +218,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             android:text="职业"
-            android:textColor="@color/texthui" />
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_3" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -352,6 +355,7 @@
             android:layout_weight="1"
             android:background="@drawable/btn_shaixuanquxiao"
             android:text="取消"
+            android:textSize="@dimen/new_size_4"
             android:textColor="@color/color_4" />
 
         <Button
@@ -361,7 +365,8 @@
             android:layout_weight="1"
             android:background="@drawable/btn_shaixuanok"
             android:text="确认"
-            android:textColor="@color/new_color_5" />
+            android:textColor="@color/color_4"
+            android:textSize="@dimen/new_size_4" />
     </LinearLayout>
 
 </LinearLayout>
