--- a/res/layout/near_xingtantonggao_item.xml
+++ b/res/layout/near_xingtantonggao_item.xml
@@ -26,6 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/main_white"
+            android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3"
             android:text="平面模特" />
 
         <TextView
@@ -34,7 +36,8 @@
             android:layout_height="wrap_content"
             android:background="@color/main_white"
             android:text="1905电影网(薪酬5000/天)"
-            android:textColor="@color/color_3" />
+android:textColor="@color/color_3"
+            android:textSize="@dimen/new_size_3" />
 
         <TextView
             android:id="@+id/tvtonggaoyaoqiu"
@@ -42,7 +45,8 @@
             android:layout_height="wrap_content"
             android:background="@color/main_white"
             android:text="北京  18-24岁  女"
-            android:textColor="@color/color_3" />
+            android:textColor="@color/color_3"
+            android:textSize="@dimen/new_size_3" />
 
     </LinearLayout>
 
