--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -98,6 +98,7 @@
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:text="21"
+            			android:textSize="@dimen/new_size_3"
                         android:textColor="@color/white" />
                 </LinearLayout>
 
@@ -107,6 +108,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:layout_weight="1"
+                    android:textColor="@color/color_2"
+            		android:textSize="@dimen/new_size_3"
                     android:text="双子座" />
 
                 <ImageView
@@ -119,7 +122,9 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="北京" />
+                    android:text="北京"
+                    android:textColor="@color/color_2"
+            		android:textSize="@dimen/new_size_3" />
 
                 <ImageView
                     android:id="@+id/imageView8"
@@ -133,7 +138,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
-                    android:text="8分钟前" />
+                    android:text="8分钟前"
+                    android:textColor="@color/color_2"
+            		android:textSize="@dimen/new_size_3" />
             </LinearLayout>
 
             <LinearLayout
@@ -166,6 +173,8 @@
                         android:layout_height="0dp"
                         android:layout_marginTop="3dp"
                         android:layout_weight="1"
+                        android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3"
                         android:text="她的动态" />
 
                     <TextView
@@ -174,6 +183,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:text="317"
+            			android:textSize="@dimen/new_size_3"
                         android:textColor="@color/bt_red" />
                 </LinearLayout>
 
@@ -244,7 +254,9 @@
                         android:id="@+id/TextView19"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="姓名" />
+                        android:text="姓名"
+                        android:textColor="@color/color_2"
+            			android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -279,7 +291,9 @@
                         android:id="@+id/TextView17"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="昵称" />
+                        android:text="昵称"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -314,7 +328,9 @@
                         android:id="@+id/TextView15"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="年龄" />
+                        android:text="年龄"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -349,7 +365,9 @@
                         android:id="@+id/TextView13"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="星座" />
+                        android:text="星座"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -384,7 +402,9 @@
                         android:id="@+id/TextView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="职业" />
+                        android:text="职业"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -419,7 +439,9 @@
                         android:id="@+id/TextView09"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="家乡" />
+                        android:text="家乡"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -454,7 +476,9 @@
                         android:id="@+id/TextView07"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="身高" />
+                        android:text="身高"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -490,7 +514,9 @@
                         android:id="@+id/TextView22"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="发布的通告" />
+                        android:text="发布的通告"
+                        android:textColor="@color/color_2"
+            android:textSize="@dimen/new_size_3" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
